--- a/css/bistro.css
+++ b/css/bistro.css
@@ -1,10 +1,17 @@
+.nav-var {
+    display: table-cell;
+}
+
+.main {
+    display: table-cell;
+}
+
 #address {
     color: #191970;
     font-size: 13pt;
     font-family: Calibri;
     font-size: 92%;
     background-image: url(/images/ocean.jpg);
-    box-sizing: border-box;
     border: solid 3px #FFE4C4;
     margin-top: 100px;
 }
@@ -13,7 +20,6 @@
     width: 250px;
     height: 350px;
     float: right;
-    clear: both;
     padding: 0 0 0 1.5em;
 }
 
@@ -40,10 +46,10 @@
 }
 
 body {
-    background-color: #00BFFF;
     color: #221811;
     font-family: Verdana, Arial, sans-serif;
-    background-image: url(images/ocean.jpg);
+    background: #00BFFF;
+    background-image: url(/images/ocean.jpg);
     background-repeat: repeat-x;
 }
 
@@ -62,10 +68,10 @@ footer {
     font-size: small;
     font-style: italic;
     text-align: center;
-    background-image: url(images/lighthouselogo1.jpg);
+    background-image: url(/images/lighthouselogo1.jpg);
     background-repeat: repeat-x;
     height: 35px;
-    margin: 5em 0 0 0;
+    margin: 3em 0;
     border: 1px solid #FFE4C4;
     border-radius: 6px;
     clear: both;
@@ -82,11 +88,8 @@ header {
 header h1 {
     height: 110px;
     padding: 30px 0 0 130px;
-    background-image: url(images/lighthouselogo.jpg);
-    background-position: left;
-    background-repeat: no-repeat;
-    border: 1px solid;
-    border-color: #FFE4C4;
+    background: url(/images/lighthouselogo.jpg) no-repeat left;
+    border: 1px solid #FFE4C4;
     border-radius: 15px;
     color: #00008B;
 }
@@ -98,23 +101,19 @@ h1 {
 
 h3 {
     color: #FFE4C4;
-    float: left;
 }
 
 li {
     color: #FFE4C4;
 }
 
-main {
-    width: 40%;
-    float: left;
+main p {
+    clear: left;
 }
 
 nav {
     font-weight: bold;
     width: 200px;
-    box-sizing: border-box;
-    display: table;
 }
 
 nav > a {
