--- a/css/bistro.css
+++ b/css/bistro.css
@@ -12,7 +12,8 @@
     font-family: Calibri;
     font-size: 92%;
     background-image: url(/images/ocean.jpg);
-    border: solid 3px #FFE4C4;
+    border: 1px solid #FFE4C4;
+    border-radius: 2px;
     margin-top: 100px;
 }
 
@@ -53,13 +54,9 @@ body {
     background-repeat: repeat-x;
 }
 
-dd {
-    color: #221811;
-}
-
-
-dt {
-    color: #FFE4C4;
+caption {
+    text-align: left;
+    font-size: 1.1em;
     font-weight: bold;
 }
 
@@ -118,6 +115,28 @@ nav {
 
 nav > a {
     text-decoration: none;
+}
+
+td img {
+    width: 100px;
+    height: 75px;
+}
+
+table {
+    border-spacing: 0;
+}
+
+td { 
+    border: 1px solid #EAEAEA;
+}
+
+tr:nth-of-type(odd) {
+    background: #A9A9A9;
+}
+
+th {
+    background: #191970;
+    color: #EAEAEA;
 }
 
 ul {
