--- a/css/bistro.css
+++ b/css/bistro.css
@@ -1,3 +1,7 @@
+.audio {
+    margin-top: 0;
+    padding-top: 0;
+}
 .nav-var {
     display: table-cell;
     padding: 0 1em 0 0;
@@ -7,8 +11,21 @@
     display: table-cell;
 }
 
+.musicDescription {
+    font-size: 0.80em;
+}
+
 #mobileNumber {
     display: none;
+}
+
+.yellow {
+    background: yellow;
+    color: red;
+}
+
+.tan {
+    background: tan;
 }
 
 #address {
@@ -29,11 +46,43 @@
     padding: 0 0 0 1.5em;
 }
 
+#maxLength {
+    font-size: 0.70em;
+    text-align: right;
+    color: green;
+    display: block;
+}
+
+#charLimit {
+    font-size: 0.70em;
+    display: block;
+    text-align: right;
+    color: green;
+    width: 82%;
+}
+
+#required {
+    font-size: 0.75rem;
+    margin: 0;
+    padding: 0;
+}
+
 #wrapper {
     margin: 0 auto;
     max-width: 900px;
     min-width: 750px;
     width: 80%;
+}
+
+#submit {
+    margin: 2em 0;
+    background: #00BFFF;
+    color: #191970;
+}
+
+#today {
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -57,7 +106,7 @@ footer {
     text-align: center;
     background-image: url(/images/lighthouselogo1.jpg);
     background-repeat: repeat-x;
-    height: 35px;
+    height: 65px;
     margin: 3em auto;
     border: 1px solid #FFE4C4;
     border-radius: 6px;
@@ -65,6 +114,11 @@ footer {
 }
 
 footer a {
+    color: #191970;
+}
+
+fieldset {
+    background: #E0E0E0;
     color: #191970;
 }
 
@@ -88,6 +142,23 @@ h1 {
 
 h3 {
     color: #FFE4C4;
+}
+
+main > form {
+    width: 100%;
+}
+
+
+label {
+    display: block;
+    text-align: justify;
+    clear: both;
+    float: right;
+    width: 100%;
+}
+
+input {
+    margin-bottom: 1em;
 }
 
 li {
@@ -150,12 +221,12 @@ ul {
 }
 
 .heading {
-        display: none;
-    }
-    
-    .text {
-        display: none;
-    }
+    display: none;
+}
+
+.text {
+    display: none;
+}
 
 @media screen and (max-width: 64em) {
     body {
@@ -217,11 +288,11 @@ ul {
         border: none;
         height: 5em;
     }
-    
+
     .heading {
         display: none;
     }
-    
+
     .text {
         display: none;
     }
@@ -238,7 +309,7 @@ ul {
     #light {
         display: none;
     }
-    
+
     #number {
         display: none;
     }
@@ -258,6 +329,10 @@ ul {
 
     h1 {
         font-size: 1.5em;
+    }
+
+    label {
+        text-align: justify;
     }
 
     .nav-var {
@@ -285,7 +360,7 @@ ul {
         display: block;
         border: none;
     }
-    
+
     caption {
         display: none;
     }
@@ -321,11 +396,11 @@ ul {
         display: none;
         border: none;
     }
-    
+
     .heading {
         display: block;
     }
-    
+
     .text {
         display: block;
     }
